--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/* color pallete 
+
+#059033
+#e3e7d3
+#bdc2bf
+#25291c
+#2d5a26
+
+*/
+
 body {
     margin: 0 auto;
     background-color: #e3e7d3;
