--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@
 
 */
 
+* {
+    box-sizing: border-box;
+}
+/* styling for the main home page */
 body {
     margin: 0 auto;
     background-color: #e3e7d3;
@@ -64,7 +68,7 @@ body {
    margin-right: 50px;
    font-size: 72px;
    margin-top: 0px;
-}
+}   
 
 .mission-statement {
     text-align: center;
@@ -99,4 +103,117 @@ body {
 #student-button, #organization-button {
     border: 5px solid black;
     border-radius: 10px;
+}
+
+/* styling for the login page */ 
+
+.login-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(images/eagle-landing.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(2px);
+}
+
+.login-box {
+    width: 420px;
+    background-color: #bdc2bf;
+    color: black;
+    border-radius: 10px;
+    padding: 30px 40px;
+    border: 2px solid rgba(255, 255, 255, .2);
+}
+
+.login-box h1 {
+    font-size: 36px;
+    text-align: center;
+    color: black;
+}
+
+.login-box .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    
+    margin: 30px 0px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder {
+    color: black;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.login-box .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: black;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.login-box .submit-btn {
+    width: 100%;
+    height: 45px;
+    background: #2d5a26;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
+    font-weight: 600;
+}
+
+.login-box .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.register-link p a {
+    color: #2d5a26;
+    text-decoration: none;
+    font-weight: 600;
+
+}
+
+.register-link p a:hover {
+    text-decoration: underline;
 }
