--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,8 @@ REMEMBER TO DELETE THIS LATER
     align-items: center;
 }
 
-#login-button {
+#login-button,
+#registration-button {
     background-color: #2d5a26;
     color: white;
 }
@@ -109,7 +110,7 @@ REMEMBER TO DELETE THIS LATER
     background: #e3e7d3;
 }
 
-#login-button {
+#login-button{
     width: 20%;
     height: 45px;
     background: #2d5a26;
@@ -122,7 +123,20 @@ REMEMBER TO DELETE THIS LATER
     color: white;
     font-weight: 600;
 }
+#registration-button {
+    width: 45%;
+    height: 45px;
+    background: #2d5a26;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
+    font-weight: 600;
 
+}
 /* styling for the login page */ 
 
 .login-body {
